--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "homepage": "https://percivalbragg.github.io/portfolio-project",
-  "name": "portfolio-project",
+  "homepage": "https://percivalbragg.github.io/reactjs-restapi-portfolio-project",
+  "name": "reactjs-restapi-portfolio-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
